rigidbody: Fix [#34106] Deleting an object with Bullet Constraint crashes Blender

Constraints are deleted before rigid bodies so need to check if constraint
exists in case both the constraint and ridid body are on the same object.